# gblan9252_soes

./: CMakeLists.txt  README.md
cmake/: FindBCM2835.cmake  gblan9252_soes_config_autogen.h.in  gblan9252_soes_defs_linux.cmake  gblan9252_soes_defs_pi.cmake
esi/: gb_lan9252.xml  gb_lan9252_dc.xml
inc/: ecat_options.h  utypes.h
libs/gblan9252_soes_config/: CMakeLists.txt
libs/gblan9252_soes_config/inc/: gbnetx_config.h
soes/: ecat_slv.c  esc.c  esc.h  esc_coe.c  esc_eoe.c  esc_foe.c  version.h
soes/hal/raspberrypi-lan9252/: esc_hw.c  esc_hw.h
soes/include/sys/gcc/: cc.h
src/: main.c  slave_objectlist.c
